--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="es">
 <head>
@@ -6,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Catálogo Tecnología</title>
 
-  <!-- CSS con ruta absoluta (GitHub Pages bajo /Acces</head>  <!-- CSS con ruta absoluta (GitHub Pages bajo /Accesories_one-/) -->
+  <!-- CSS con ruta absoluta (GitHub Pages bajo /Accesories_one-/) -->
+  /Accesories_one-/styles.css
+
+  <!-- JS con ruta absoluta (CORRECTO) -->
+  /Accesories_one-/app.js</script>
+</head>
 <body>
   <header class="site-header">
     <h1>Catálogo <span class="tag">Tech</span></h1>
@@ -25,7 +29,3 @@
   <footer class="site-footer">Hecho con ❤️ por Cristian</footer>
 </body>
 </html>
-  /Accesories_one-/styles.css
-
-  <!-- JS con ruta absoluta (CORRECTO) -->
-  /Accesories_one-/app.js</script>
