--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- CSS con ruta absoluta (GitHub Pages bajo /Accesories_one-/) -->
   /Accesories_one-/styles.css
 
-  <!-- JS con ruta absoluta (CORRECTO) -->
+  <!-- JS con ruta absoluta (se carga cuando el DOM está listo) -->
   /Accesories_one-/app.js</script>
 </head>
 <body>
