--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Productos — Ancol One</title>
+  <title>Productos — Ancol One (Rescate)</title>
 
   <!-- Fuentes + tu CSS (etiquetas correctas) -->
   https://fonts.googleapis.com
@@ -12,8 +12,14 @@
   https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap
   css/styles.css
 
-  <!-- Tailwind CDN (etiqueta correcta) -->
+  <!-- Tailwind (CDN) -->
   https://cdn.tailwindcss.com</script>
+
+  <style>
+    /* fallback mínimo por si styles.css no cargara */
+    .product-card img{ width:100%; height:220px; object-fit:contain; background:#fff; }
+    .line-clamp-2{ display:-webkit-box; -webkit-line-clamp:2; line-clamp:2; -webkit-box-orient:vertical; overflow:hidden; }
+  </style>
 </head>
 <body class="font-inter text-ink-800 dark:bg-ink-900 dark:text-ink-100 antialiased">
 
@@ -37,10 +43,10 @@
 
   <main class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-12">
     <h1 class="text-3xl font-bold">Productos</h1>
-    <p class="mt-2 text-ink-600 dark:text-ink-300">Explora nuestro catálogo de accesorios y tecnología.</p>
+    <p class="mt-2 text-gray-600 dark:text-gray-300">Explora nuestro catálogo de accesorios y tecnología.</p>
 
     <div class="mt-6 flex flex-wrap items-center gap-3">
-      <input id="buscador" class="rounded-lg border-ink-300 dark:border-ink-700 bg-white dark:bg-ink-900 px-3 py-2 w-full sm:w-72" placeholder="Buscar..." />
+      <input id="buscador" class="rounded-lg border-gray-300 dark:border-gray-700 bg-white dark:bg-ink-900 px-3 py-2 w-full sm:w-72" placeholder="Buscar..." />
       <div class="flex flex-wrap gap-2">
         <button class="f-chip active" data-filter="all">Todas</button>
         <button class="f-chip" data-filter="audio">Audio</button>
@@ -50,18 +56,87 @@
       </div>
     </div>
 
-    <!-- Aquí pintamos las tarjetas -->
+    <!-- Grid de productos -->
     <div id="gridProductos" class="mt-8 grid sm:grid-cols-2 lg:grid-cols-4 gap-6"></div>
+
+    <!-- Panel de errores de rescate -->
+    <pre id="rescueErrors" class="mt-6 text-sm text-red-600 whitespace-pre-wrap"></pre>
   </main>
 
-  <footer class="border-t border-ink-200 dark:border-ink-800 py-10">
-    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-sm text-ink-500">
+  <footer class="border-t border-gray-200 dark:border-gray-800 py-10">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 text-sm text-gray-500">
       © <span id="anio"></span> Ancol One. Todos los derechos reservados.
     </div>
   </footer>
 
-  <!-- Scripts (orden correcto) -->
-  js/main.js</script>
-  js/products.js?v=20260122f</script>
+  <!-- ========= RESCUE SCRIPT (inline) ========= -->
+  <script>
+  (async () => {
+    const BASE = '/Accesories-one';
+    const LOTES = [
+      '/prueba_lote/productos_prueba.json',
+      '/lote_01/productos_lote_01.json'
+    ];
+    const IMG_BASES = {
+      'prueba_lote': `${BASE}/prueba_lote/images/`,
+      'lote_01': `${BASE}/lote_01/images/`
+    };
+
+    const $grid = document.getElementById('gridProductos');
+    const $err  = document.getElementById('rescueErrors');
+    const log   = (...a)=>{ console.log('[RESCUE]', ...a); };
+    const fail  = (msg)=>{ $err.textContent += msg + '\\n'; console.error('[RESCUE]', msg); };
+
+    try {
+      // Fetch multilote con tolerancia (continúa si un lote falla)
+      const results = await Promise.allSettled(
+        LOTES.map(url => fetch(BASE + url).then(r => ({ ok:r.ok, url, r })))
+      );
+
+      const jsons = [];
+      for (const res of results) {
+        if (res.status === 'fulfilled' && res.value.ok) {
+          const { url, r } = res.value;
+          const data = await r.json();
+          const folder = url.split('/')[1]; // 'prueba_lote' o 'lote_01'
+          const items = data.map(p => ({ ...p, _imgBase: IMG_BASES[folder] }));
+          jsons.push(...items);
+          log('OK JSON:', url, 'items:', items.length);
+        } else {
+          const url = res?.value?.url || '(desconocido)';
+          const status = res?.value?.r?.status || res?.reason || 'error';
+          fail(`No se pudo cargar ${url} → ${status}`);
+        }
+      }
+
+      // Si no hay items, avisar y salir
+      if (!jsons.length) {
+        fail('No llegaron productos desde ningún lote.');
+        return;
+      }
+
+      // Render simple con <img>
+      $grid.innerHTML = jsons.map(item => `
+        <article class="product-card rounded-lg border border-gray-200 dark:border-gray-800 p-3 flex flex-col">
+          <div class="aspect-[4/3] bg-white flex items-center justify-center overflow-hidden rounded">
+            ${item._imgBase + item.imagen}
+          </div>
+          <h3 class="mt-3 font-semibold">${item.titulo || ''}</h3>
+          <p class="mt-1 text-sm text-gray-600 dark:text-gray-300 line-clamp-2">${item.descripcion || ''}</p>
+          <div class="mt-3 text-xs uppercase tracking-wide text-gray-500">${item.categoria || 'General'}</div>
+        </article>
+      `).join('');
+
+      log('RESCUE render OK. Total:', jsons.length);
+
+      // Verificación final en consola
+      log('Primera IMG:', document.querySelector('#gridProductos img')?.src || '(no img)');
+    } catch (e) {
+      fail('Excepción en RESCUE: ' + (e?.message || e));
+    }
+  })();
+  </script>
+  <!-- ========= /RESCUE SCRIPT ========= -->
+
 </body>
 </html>
